<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
    
  <groupId>br.com.wagnersoft</groupId>
  <artifactId>macedonia</artifactId>
  <version>1.0-alpha</version>

  <name>br.com.wagnersoft.babilonia</name>
  <description>Open view WEB APP</description>
  <inceptionYear>2026</inceptionYear>
  <url>https://wagnerlopes.github.io/</url>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.7</version>
  </parent>

  <dependencies>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>
  
    <!-- TESTE -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>

    <plugins>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>21</release>
          <source>21</source>
          <target>21</target>
          <fork>true</fork>
          <parameters>true</parameters>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.8.3.0</version>
        <configuration>
          <effort>Max</effort> <!-- nível de análise: Min, Default, Max -->
          <threshold>Low</threshold> <!-- severidade mínima: High, Medium, Low -->
          <xmlOutput>true</xmlOutput> <!-- gera relatório em XML -->
          <failOnError>false</failOnError> <!-- não falhar build em caso de bugs -->
        </configuration>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
          
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <skipTests>false</skipTests>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <failOnViolation>false</failOnViolation>
        </configuration>
      </plugin>
    
    </plugins>

  </build>

  <organization>
    <name>WagnerSoft - WL</name>
    <url>https://github.com/WagnerSoft-WL</url>
  </organization>

  <developers>
    <developer>
      <id>wagnerlopes</id>
      <name>Wagner Luis Lopes</name>
      <email>wagner.luis.alopes@gmail.com</email>
      <organization>WagnerSoft - WL</organization>
      <organizationUrl>https://wagnerlopes.github.io/</organizationUrl>
      <roles>
        <role>Manager</role>
        <role>Developer</role>
      </roles>
      <url>https://github.com/wagnerlopes</url>
      <timezone>-3</timezone>
    </developer>
  </developers>
	
</project>
